syntax = "proto3";

option go_package = "./fbcrawl;fbcrawl";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

//package helloworld;

// The greeting service definition.
//service Greeter {
//  // Sends a greeting
//  rpc SayHello (HelloRequest) returns (HelloReply) {}
//}

// The request message containing the user's name.
message FacebookGroup {
  string id = 1;
  string name = 2;
}

message FacebookPost {
  string id = 1;
  string content = 2;
}

message FacebookComment {
  string id = 1;
  string content = 2;
}

message FacebookPostList {
  repeated FacebookPost posts = 1;
}
